--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "moment": "^2.18.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-scripts": "1.0.13"
+    "react-scripts": "1.0.13",
+    "remarkable": "^1.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
