--- a/package.json
+++ b/package.json
@@ -1,20 +1,31 @@
 {
-  "name": "moon-log",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "classnames": "^2.2.5",
-    "express": "^4.15.4",
-    "moment": "^2.18.1",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-scripts": "1.0.13",
-    "remarkable": "^1.7.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  }
+    "name": "heroku-cra-node",
+    "version": "1.0.0",
+    "description": "How to use create-react-app with a custom Node API on Heroku",
+    "engines": {
+        "node": "6.11.x"
+    },
+    "scripts": {
+        "start": "node server",
+        "heroku-postbuild": "cd react-ui/ && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
+    },
+    "cacheDirectories": [
+        "node_modules",
+        "react-ui/node_modules"
+    ],
+    "dependencies": {
+        "express": "^4.14.1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/mars/heroku-cra-node.git"
+    },
+    "keywords": [
+        "node",
+        "heroku",
+        "create-react-app",
+        "react"
+    ],
+    "license": "MIT",
+    "devDependencies": {}
 }
