--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
         "react-ui/node_modules"
     ],
     "dependencies": {
-        "express": "^4.14.1"
+        "express": "^4.14.1",
+        "jwt-simple": "^0.5.1",
+        "moment": "^2.18.1"
     },
     "repository": {
         "type": "git",
