--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
         "react-ui/node_modules"
     ],
     "dependencies": {
-        "express": "^4.14.1",
+        "body-parser": "^1.18.1",
+        "compression": "^1.7.0",
+        "express": "^4.15.4",
         "jwt-simple": "^0.5.1",
-        "moment": "^2.18.1"
+        "moment": "^2.18.1",
+        "pg-promise": "^6.7.1"
     },
     "repository": {
         "type": "git",
