--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "express": "^4.15.4",
         "jwt-simple": "^0.5.1",
         "moment": "^2.18.1",
-        "pg-promise": "^6.7.1"
+        "pg-promise": "^6.7.1",
+        "react-tooltip": "^3.3.0"
     },
     "repository": {
         "type": "git",
