--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -9,6 +9,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-scripts": "1.0.13",
+    "react-tooltip": "^3.3.0",
     "remarkable": "^1.7.1"
   },
   "scripts": {
