--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
         "react-ui/node_modules"
     ],
     "dependencies": {
+        "bcrypt": "^1.0.3",
         "body-parser": "^1.18.1",
         "compression": "^1.7.0",
         "express": "^4.15.4",
         "jwt-simple": "^0.5.1",
         "moment": "^2.18.1",
-        "pg-promise": "^6.7.1",
+        "pg-promise": "^6.8.0",
         "react-tooltip": "^3.3.0"
     },
     "repository": {
@@ -37,6 +38,7 @@
     "license": "MIT",
     "devDependencies": {
         "dotenv": "^4.0.0",
-        "jest": "^21.1.0"
+        "jest": "^21.1.0",
+        "nodemon": "^1.12.1"
     }
 }
