--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -8,6 +8,7 @@
     "moment": "^2.18.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-js-pagination": "^2.2.0",
     "react-scripts": "1.0.13",
     "react-tooltip": "^3.3.0",
     "remarkable": "^1.7.1"
