--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^15.6.1",
     "react-emoji-render": "^0.4.2",
     "react-js-pagination": "^2.2.0",
+    "react-router": "^4.2.0",
     "react-scripts": "1.0.13",
     "react-tooltip": "^3.3.0",
     "remarkable": "^1.7.1",
@@ -19,8 +20,7 @@
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
-    "watch-css":
-      "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
+    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
     "build": "npm run build-css && react-scripts build",
