--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.16.2",
     "classnames": "^2.2.5",
     "express": "^4.15.4",
     "moment": "^2.18.1",
@@ -12,7 +13,7 @@
     "react-dom": "^15.6.1",
     "react-emoji-render": "^0.4.2",
     "react-js-pagination": "^2.2.0",
-    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.13",
     "react-tooltip": "^3.3.0",
     "remarkable": "^1.7.1",
