--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   "scripts": {
     "start": "node server",
     "dev": "nodemon server",
-    "heroku-postbuild":
-      "cd react-ui/ && npm install && npm install --only=dev --no-shrinkwrap && npm run build",
+    "heroku-postbuild": "cd react-ui/ && npm install && npm install --only=dev --no-shrinkwrap && npm run build",
     "test": "ENV=test jest",
     "test:watch": "ENV=test jest --watch"
   },
-  "cacheDirectories": ["node_modules", "react-ui/node_modules"],
+  "cacheDirectories": [
+    "node_modules",
+    "react-ui/node_modules"
+  ],
   "dependencies": {
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.1",
@@ -28,7 +30,12 @@
     "type": "git",
     "url": "https://github.com/mars/heroku-cra-node.git"
   },
-  "keywords": ["node", "heroku", "create-react-app", "react"],
+  "keywords": [
+    "node",
+    "heroku",
+    "create-react-app",
+    "react"
+  ],
   "license": "MIT",
   "devDependencies": {
     "dotenv": "^4.0.0",
